Fix superfluous scrollbar on small screen

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   background: var(--color-light);
   margin: 0;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 h1 {
